--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,4 +4,4 @@ DisplayMode: Normal
 Author: Sebastian Palmas <s.palmas@cgiar.org>
 AuthorUrl: http://www.cimmyt.org/
 Type: Shiny
-Tags: leaflet selectize datatables absolutepanel
+Tags: leaflet
